Implemented AI Service and swagger update
